--- a/001-escrow/clarinet-projects/arsalankhan/history.txt
+++ b/001-escrow/clarinet-projects/arsalankhan/history.txt
@@ -1,5 +1,10 @@
 #V2
 ::set_tx_sender ST1J4G6RR643BCG8G8SR6M2D9Z9KXT2NJDRK3FBTK
-(contract-call? 'ST1HTBVD3JG9C05J7HBJTHGR0GGW7KXW28M5JS8QE.escrow send-funds u100 'ST20ATRN26N9P05V2F1RHFRV24X8C8M3W54E427B2)
+(contract-call? 'ST1HTBVD3JG9C05J7HBJTHGR0GGW7KXW28M5JS8QE.escrow buyItem u20 'ST20ATRN26N9P05V2F1RHFRV24X8C8M3W54E427B2)
+(contract-call? 'ST1HTBVD3JG9C05J7HBJTHGR0GGW7KXW28M5JS8QE.escrow buyItem u20)
+(contract-call? 'ST1HTBVD3JG9C05J7HBJTHGR0GGW7KXW28M5JS8QE.escrow transferFunds u20)
+::set_tx_sender ST20ATRN26N9P05V2F1RHFRV24X8C8M3W54E427B2
+(contract-call? 'ST1HTBVD3JG9C05J7HBJTHGR0GGW7KXW28M5JS8QE.escrow transferFunds u20)
 (contract-call? 'ST1HTBVD3JG9C05J7HBJTHGR0GGW7KXW28M5JS8QE.escrow itemRecieved)
-::get_assets_maps
+::set_tx_sender ST1J4G6RR643BCG8G8SR6M2D9Z9KXT2NJDRK3FBTK
+(contract-call? 'ST1HTBVD3JG9C05J7HBJTHGR0GGW7KXW28M5JS8QE.escrow itemRecieved)
