--- a/003-ft/clarinet-projects/arsalankhan/my-token-contract/history.txt
+++ b/003-ft/clarinet-projects/arsalankhan/my-token-contract/history.txt
@@ -1,2 +1,3 @@
 #V2
-::get_assets_maps
+::set_tx_sender ST1J4G6RR643BCG8G8SR6M2D9Z9KXT2NJDRK3FBTK
+(contract-call? 'ST1HTBVD3JG9C05J7HBJTHGR0GGW7KXW28M5JS8QE.omega-contract buy-omega u20)
